--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,22 @@
-# Core
-langgraph>=0.2.0
-langchain>=0.3.0
-langchain-core>=0.3.0
-
-# API
-fastapi>=0.115.0
-uvicorn[standard]>=0.32.0
-pydantic>=2.0.0
-
 # LLM
 openai>=1.50.0
 
 # Data
 pandas>=2.0.0
-pyarrow>=15.0.0
+pyarrow>=15.0.0,<22.0.0
 numpy>=1.26.0
+scikit-learn>=1.3.0
 
 # Vector Database
 chromadb>=0.5.0
 
-# Observability
+# Observability (Phoenix tracing)
 arize-phoenix>=5.0.0
 openinference-instrumentation-langchain>=0.1.0
 opentelemetry-sdk>=1.27.0
 opentelemetry-exporter-otlp>=1.27.0
+opentelemetry-instrumentation-openai>=0.45b0
 
-# Utils
+# Config (for src/config.py)
+pydantic-settings>=2.0.0
 python-dotenv>=1.0.0
