--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ langchain-core>=0.3.0
 fastapi>=0.115.0
 uvicorn[standard]>=0.32.0
 pydantic>=2.0.0
+pydantic-settings>=2.0.0
 
 # LLM
 openai>=1.50.0
