--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,10 @@ phoenix_data/
 # OS
 .DS_Store
 Thumbs.db
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/.env.local
+frontend/.env.production
